# elfutils

./: configure.ac
pyelfutils/: Makefile.am  elfutils.c  test.py
